# Mean-Field---Disorder-Hubbard

DisorderConductivity/: Conductivity.md  README.md  addbonds.py  build.py  cgs.py  dia.cpp  diamagnetic.py  para.cpp  paramagnetic.py  susc.h  util.py
DisorderConductivity/src/: CMakeLists.txt
DisorderConductivity3p5/: localCondCalc.h  localCondCalcNaive.h  testLocalCondCalc.cpp
Jupyter Notebooks/: Paramagnetic Current Plots.ipynb  Percolation Analysis.ipynb
fits_files_toAnalyze/: script  stopJobs  submit.sh  submit_dos.sh  submit_ldos.sh  submit_mu.sh
